--- a/content/docs/api-reference/index.mdx
+++ b/content/docs/api-reference/index.mdx
@@ -36,6 +36,8 @@ If `ELIZA_SERVER_AUTH_TOKEN` is set, include the API key in headers:
 X-API-KEY: your-api-key
 ```
 
+**Note:** Authentication is optional. If `ELIZA_SERVER_AUTH_TOKEN` is not set, all requests are allowed without authentication.
+
 ### Response Format
 
 All API responses follow a consistent format:
