--- a/content/docs/getting-started/configuration.mdx
+++ b/content/docs/getting-started/configuration.mdx
@@ -1,9 +1,9 @@
 ---
 title: Configuration
-description: Complete configuration guide for ElizaOS v1.2.0
+description: Complete configuration guide for ElizaOS
 ---
 
-This guide covers comprehensive configuration for ElizaOS v1.2.0, including environment setup,
+This guide covers comprehensive configuration for ElizaOS, including environment setup,
 development workflows, project types, and best practices.
 
 import { Callout } from "fumadocs-ui/components/callout";
@@ -12,7 +12,7 @@ import { Step, Steps } from "fumadocs-ui/components/steps";
 import { Tab, Tabs } from "fumadocs-ui/components/tabs";
 
 <Callout type="info">
-  ElizaOS v1.2.0 introduces enhanced configuration management with interactive tools, improved
+  ElizaOS provides enhanced configuration management with interactive tools, improved
   environment handling, and streamlined development workflows.
 </Callout>
 
@@ -99,7 +99,7 @@ elizaos env check
 
 ## Project Types
 
-ElizaOS v1.2.0 supports four distinct project types:
+ElizaOS supports four distinct project types:
 
 ### Project Type Selection
 
@@ -738,4 +738,4 @@ elizaos publish
 
 ---
 
-**Configuration complete!** Your ElizaOS v1.2.0 environment is ready for development.
+**Configuration complete!** Your ElizaOS environment is ready for development.
