--- a/content/docs/learning-tracks/simple/guides/troubleshooting-guide.mdx
+++ b/content/docs/learning-tracks/simple/guides/troubleshooting-guide.mdx
@@ -75,7 +75,7 @@ npm ERR! Error: EACCES: permission denied
 3. **Use npx instead**
    ```bash
    # Run without global installation
-   npx @elizaos/cli create -t project my-agent
+   npx @elizaos/cli create my-agent --type project
    ```
 
 ### Issue: Bun Installation Fails
