--- a/content/docs/learning-tracks/simple/index.mdx
+++ b/content/docs/learning-tracks/simple/index.mdx
@@ -22,37 +22,38 @@ By the end of this track, you'll have:
 - An agent deployed to Discord or Telegram
 - Confidence to explore more advanced features
 
-## Learning Modules
+## Learning Path
 
-### Module 1: Quick Start (30 minutes)
+### Getting Started
 
-- [Environment Setup](./01-environment-setup)
-- [Your First Agent](./02-first-agent)
-- [Testing Locally](./03-local-testing)
+- [Introduction to ElizaOS](./intro)
+- [Comprehensive Quick Start Guide](./guides/quickstart-comprehensive)
+- [Quick Start Guide](./getting-started/quick-start)
 
-### Module 2: Character Development (45 minutes)
+### Development Guides
 
-- [Character Configuration](./04-character-config)
-- [Personality and Knowledge](./05-personality-knowledge)
-- [Message Examples](./06-message-examples)
+- [Choosing Your Development Approach](./guides/choosing-development-approach)
+- [Character Creation](./guides/character-creation)
+- [CLI Reference](./guides/cli-reference)
+- [Deployment Guide](./guides/deployment-guide)
+- [Troubleshooting Guide](./guides/troubleshooting-guide)
 
-### Module 3: Plugin Basics (30 minutes)
+### Templates & Examples
 
-- [Essential Plugins](./07-essential-plugins)
-- [Plugin Configuration](./08-plugin-config)
-- [Common Actions](./09-common-actions)
+- [Template Overview](./templates/)
+- [Discord Agent Template](./templates/discord-agent)
+- [Twitter Agent Template](./templates/twitter-agent)
+- [Creative Writer Template](./templates/creative-writer)
+- [Gaming Buddy Template](./templates/gaming-buddy)
+- [Helpful Assistant Template](./templates/helpful-assistant)
 
-### Module 4: Platform Deployment (45 minutes)
+### Vibe Learning
 
-- [Discord Integration](./10-discord-setup)
-- [Telegram Integration](./11-telegram-setup)
-- [Testing Your Bot](./12-bot-testing)
+- [Vibe-Codable Tutorial](./vibe-codable-tutorial)
 
-### Module 5: Next Steps (30 minutes)
+### Help & Support
 
-- [Customization Tips](./13-customization)
-- [Troubleshooting](./14-troubleshooting)
-- [What's Next](./15-whats-next)
+- [Frequently Asked Questions](./faq)
 
 ## Track Features
 
@@ -76,25 +77,27 @@ Clear checkpoints to measure your progress.
 
 Before starting, make sure you have:
 
-- [ ] Node.js 18+ installed
-- [ ] Basic understanding of JSON
+- [ ] Node.js 23.3.0+ installed
+- [ ] Bun 1.2.15+ installed
+- [ ] Basic understanding of JSON/TypeScript
 - [ ] Text editor (VS Code recommended)
-- [ ] Discord or Telegram account (for deployment)
+- [ ] Discord, Twitter, or Telegram account (for deployment)
 
 ## Getting Help
 
 If you get stuck:
 
-1. Check the [Troubleshooting](./14-troubleshooting) guide
-2. Review the [Core Concepts](../../core-concepts/) documentation
-3. Ask in the Discord community
-4. Open a GitHub issue
+1. Check the [Troubleshooting Guide](./guides/troubleshooting-guide)
+2. Review the [FAQ](./faq)
+3. Check the [Core Concepts](../../core-concepts/) documentation
+4. Ask in the [Discord community](https://discord.gg/eliza)
+5. Open a [GitHub issue](https://github.com/elizaos/eliza/issues)
 
 ## Ready to Start?
 
 Let's build your first ElizaOS agent!
 
-[Start Module 1: Environment Setup →](./01-environment-setup)
+[Start with the Comprehensive Quick Start Guide →](./guides/quickstart-comprehensive)
 
 ---
 
