--- a/content/docs/learning-tracks/simple/templates/twitter-agent.mdx
+++ b/content/docs/learning-tracks/simple/templates/twitter-agent.mdx
@@ -109,14 +109,7 @@ description: A social media agent that posts and engages on Twitter/X
 Add to your `.env` file:
 
 ```bash
-# Twitter Configuration (choose one method)
-
-# Method 1: Username/Password (easier)
-TWITTER_USERNAME=your_twitter_handle
-TWITTER_PASSWORD=your_password
-TWITTER_EMAIL=your_email@example.com
-
-# Method 2: API Keys (more stable)
+# Twitter Configuration - API Keys 
 TWITTER_API_KEY=your_api_key
 TWITTER_API_SECRET_KEY=your_api_secret
 TWITTER_ACCESS_TOKEN=your_access_token
