--- a/content/docs/migration/migration-helper.mdx
+++ b/content/docs/migration/migration-helper.mdx
@@ -412,6 +412,6 @@ For a more comprehensive solution, use the ElizaOS CLI:
 
 ```bash
 # Use the official CLI migration tools
-elizaos migrate --from=1.1.x --to=1.2.0
-elizaos validate
+bunx @elizaos/cli migrate --from=1.1.x --to=1.2.0
+bunx @elizaos/cli validate
 ```
