--- a/content/docs/advanced/deployment.mdx
+++ b/content/docs/advanced/deployment.mdx
@@ -43,8 +43,15 @@ RUN apt-get update && \
 # Install package managers
 RUN npm install -g bun@1.2.5 turbo@2.3.3
 
-# Copy and build
-COPY . .
+# Create Python symlink
+RUN ln -s /usr/bin/python3 /usr/bin/python
+
+# Copy package files first for better caching
+COPY package.json turbo.json tsconfig.json lerna.json renovate.json .npmrc ./
+COPY scripts ./scripts
+COPY packages ./packages
+
+# Install dependencies and build
 RUN SKIP_POSTINSTALL=1 bun install --no-cache
 RUN bun run build
 
@@ -59,13 +66,27 @@ RUN apt-get update && \
     ffmpeg \
     git \
     python3 \
-    unzip
+    unzip && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Copy built application
-COPY --from=builder /app .
+# Install package managers in runtime
+RUN npm install -g bun@1.2.5 turbo@2.3.3
+
+# Copy specific files from builder
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/turbo.json ./
+COPY --from=builder /app/tsconfig.json ./
+COPY --from=builder /app/lerna.json ./
+COPY --from=builder /app/renovate.json ./
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/packages ./packages
+COPY --from=builder /app/scripts ./scripts
 
 ENV NODE_ENV=production
-EXPOSE 3000 50000-50100/udp
+
+EXPOSE 3000
+EXPOSE 50000-50100/udp
 
 CMD ["bun", "run", "start"]
 ```
@@ -120,7 +141,7 @@ docker run -d \
 The `docker-compose.yaml` provides a full production stack:
 
 ```yaml
-version: "3"
+version: '3'
 services:
   postgres:
     image: ankane/pgvector:latest
@@ -132,9 +153,9 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data:rw
     ports:
-      - "127.0.0.1:5432:5432"
+      - '127.0.0.1:5432:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test: ['CMD-SHELL', 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}']
       interval: 5s
       timeout: 5s
       retries: 5
@@ -160,8 +181,8 @@ services:
       - DISCORD_APPLICATION_ID=${DISCORD_APPLICATION_ID}
       - DISCORD_API_TOKEN=${DISCORD_API_TOKEN}
     ports:
-      - "3000:3000"
-      - "50000-50100:50000-50100/udp"
+      - '3000:3000'
+      - '50000-50100:50000-50100/udp'
     depends_on:
       postgres:
         condition: service_healthy
@@ -246,7 +267,7 @@ primary_region = "iad"
 [build]
 
 [env]
-  PORT = "3000"
+PORT = "3000"
 
 [http_service]
   internal_port = 3000
@@ -591,7 +612,7 @@ USER nodejs
 services:
   postgres:
     ports:
-      - "127.0.0.1:5432:5432" # Local only
+      - '127.0.0.1:5432:5432' # Local only
 ```
 
 ### Secrets Management
