--- a/content/docs/core-concepts/architecture/package-organization.mdx
+++ b/content/docs/core-concepts/architecture/package-organization.mdx
@@ -65,7 +65,8 @@ The development layer supports development and tooling:
 
 The packages follow a clear dependency hierarchy:
 
-<Mermaid chart="graph TD
+```mermaid
+graph TD
     A[@elizaos/core] --> B[@elizaos/cli]
     A --> C[@elizaos/client]
     A --> D[@elizaos/server]
@@ -73,12 +74,14 @@ The packages follow a clear dependency hierarchy:
     A --> F[@elizaos/plugin-sql]
     A --> G[@elizaos/plugin-bootstrap]
     A --> H[@elizaos/plugin-starter]
-
-    B --> I[@elizaos/create-eliza]
-    C --> J[@elizaos/docs]
-
+    
+    E --> C[Client uses API client]
+    D --> I[Server hosts agents]
+    B --> J[@elizaos/create-eliza]
+    
     F --> K[Database Providers]
-    G --> L[Bootstrap Services]" />
+    G --> L[Bootstrap Services]
+```
 
 ### Core Dependencies
 
@@ -87,12 +90,22 @@ The core package has minimal external dependencies:
 ```json
 {
   "dependencies": {
-    "uuid": "^10.0.0",
-    "zod": "^3.22.4",
-    "typescript": "5.8.2"
-  },
-  "peerDependencies": {
-    "node": "23.3.0"
+    "@sentry/browser": "^9.22.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "dotenv": "16.5.0",
+    "events": "^3.3.0",
+    "glob": "11.0.3",
+    "handlebars": "^4.7.8",
+    "js-sha1": "0.7.0",
+    "langchain": "^0.3.15",
+    "pdfjs-dist": "^5.2.133",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "stream-browserify": "^3.0.0",
+    "unique-names-generator": "4.7.1",
+    "uuid": "11.1.0",
+    "zod": "^3.24.4"
   }
 }
 ```
@@ -106,9 +119,12 @@ Interface packages depend on core and add UI/API specific dependencies:
 {
   "dependencies": {
     "@elizaos/core": "workspace:*",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "vite": "^5.0.0"
+    "@elizaos/api-client": "workspace:*",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "@tanstack/react-query": "^5.67.2",
+    "socket.io-client": "^4.8.1",
+    "vite": "^6.3.5"
   }
 }
 
@@ -430,37 +446,34 @@ packages/client/src/
 
 ### Hook Pattern
 
-Custom hooks encapsulate complex logic:
+Custom hooks encapsulate complex logic using Tanstack React Query:
 
 ```typescript
-// packages/client/src/hooks/use-agent-management.ts
-export function useAgentManagement() {
-  const [agents, setAgents] = useState<Agent[]>([]);
-  const [loading, setLoading] = useState(false);
+// packages/client/src/hooks/use-query-hooks.ts
+export const useAgents = () => {
+  return useQuery<ListAgentsResponse>({
+    queryKey: ['agents'],
+    queryFn: async () => {
+      const elizaClient = createElizaClient();
+      const data = await elizaClient.agents.listAgents();
+      return { data };
+    },
+    staleTime: STALE_TIMES.FREQUENT,
+  });
+};
 
-  const createAgent = useCallback(async (config: AgentConfig) => {
-    setLoading(true);
-    try {
-      const agent = await api.createAgent(config);
-      setAgents((prev) => [...prev, agent]);
-      return agent;
-    } finally {
-      setLoading(false);
-    }
-  }, []);
-
-  const deleteAgent = useCallback(async (agentId: UUID) => {
-    await api.deleteAgent(agentId);
-    setAgents((prev) => prev.filter((agent) => agent.id !== agentId));
-  }, []);
-
-  return {
-    agents,
-    loading,
-    createAgent,
-    deleteAgent,
-  };
-}
+export const useCreateAgent = () => {
+  const queryClient = useQueryClient();
+  return useMutation({
+    mutationFn: async (data: CreateAgentData) => {
+      const elizaClient = createElizaClient();
+      return elizaClient.agents.createAgent(data);
+    },
+    onSuccess: () => {
+      queryClient.invalidateQueries({ queryKey: ['agents'] });
+    },
+  });
+};
 ```
 
 ## CLI Package Organization
@@ -532,15 +545,25 @@ The server package provides hosting capabilities:
 
 ```
 packages/server/src/
-├── index.ts               # Server entry point
-├── authMiddleware.ts      # Authentication middleware
-├── bus.ts                 # Message bus
-├── loader.ts              # Agent loader
-├── types.ts               # Server types
-├── upload.ts              # File upload handling
-└── examples/              # Usage examples
-    ├── standalone-server.ts
-    └── package.json
+├── index.ts               # Server entry point & AgentServer class
+├── authMiddleware.ts      # API key authentication middleware
+├── bus.ts                 # Internal message bus
+├── loader.ts              # Character/agent loader utilities
+├── types.ts               # Server-specific types
+├── api/                   # API route implementations
+│   ├── index.ts          # Main API router
+│   ├── agents.ts         # Agent management routes
+│   ├── messaging.ts      # Message handling routes
+│   ├── memory.ts         # Memory operations routes
+│   ├── audio.ts          # Audio processing routes
+│   ├── media.ts          # File upload/serving routes
+│   ├── runtime.ts        # Server runtime routes
+│   ├── system.ts         # System config routes
+│   └── tee.ts            # TEE operations routes
+├── socketio/              # WebSocket implementation
+│   └── index.ts          # SocketIORouter class
+└── services/              # Server services
+    └── message.ts         # Message bus connector plugin
 ```
 
 ### Middleware Pattern
@@ -628,7 +651,7 @@ Lerna manages version synchronization:
 
 ```json
 {
-  "version": "1.0.16",
+  "version": "1.1.8",
   "packages": ["packages/*"],
   "command": {
     "version": {
