--- a/content/docs/guides/client-types-implementations.mdx
+++ b/content/docs/guides/client-types-implementations.mdx
@@ -9,7 +9,7 @@ ElizaOS supports multiple client types for connecting agents to different platfo
 ## Client Architecture Overview
 
 <Callout type="info">
-**IMPORTANT - Unified Processing**: All client types feed messages into the same processing pipeline. The `processMessage` function is **completely platform-agnostic** and handles messages identically regardless of their origin - Discord, Twitter, REST API, Telegram, or any other client.
+**IMPORTANT - Unified Processing**: All client types feed messages into the same processing pipeline through the internal message bus. Messages are processed identically by the agent runtime regardless of their origin - Discord, Twitter, REST API, Telegram, or any other client.
 
 **The client type ONLY affects:**
 1. How messages are received from the platform (API format)
@@ -17,10 +17,12 @@ ElizaOS supports multiple client types for connecting agents to different platfo
 3. Platform-specific features (embeds, character limits, media handling)
 
 **The client type DOES NOT affect:**
-1. How agents process messages (same `processMessage` function)
+1. How agents process messages (same runtime and action system)
 2. Decision making logic (same `shouldRespond` evaluation)
 3. Response generation (same templates and AI models)
 4. Action processing (same action handlers)
+
+**Note**: Platform integrations are configured via environment variables and character settings. External platforms should send messages to the `/api/messaging/ingest-external` endpoint for processing.
 </Callout>
 
 ### Message Flow Architecture
@@ -32,7 +34,7 @@ ElizaOS supports multiple client types for connecting agents to different platfo
     D[Telegram Client] --> E
     F[WebSocket Client] --> E
     E --> G[Agent Runtime]
-    G --> H[processMessage]
+    G --> H[Agent Processing]
     H --> I[Response]
     I --> E
     E --> A
@@ -87,8 +89,19 @@ export class RESTClient {
         createdAt: Date.now()
       };
 
-      // Process through standard pipeline - SAME FOR ALL CLIENTS
-      await this.runtime.processMessage(message);
+      // Send to REST API for processing
+      const response = await fetch('http://localhost:3000/api/messaging/ingest-external', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          channel_id: message.roomId,
+          server_id: '00000000-0000-0000-0000-000000000000',
+          author_id: message.entityId,
+          content: message.content.text,
+          source_type: 'rest_api',
+          raw_message: message.content
+        })
+      });
       
       res.json({ success: true, messageId: message.id });
     });
@@ -178,23 +191,33 @@ The Discord client integrates with Discord's bot API for server and DM interacti
 - Reaction handling
 - Thread support
 
-**Plugin Configuration:**
+**Environment Configuration:**
+```bash
+# .env file
+DISCORD_APPLICATION_ID=your-app-id
+DISCORD_API_TOKEN=your-bot-token
+```
+
+**Character Configuration:**
 ```json
 {
   "name": "MyDiscordBot",
   "plugins": [
     "@elizaos/plugin-sql",
-    "@elizaos/plugin-discord",
     "@elizaos/plugin-bootstrap"
   ],
   "settings": {
     "secrets": {
-      "DISCORD_BOT_TOKEN": "your-bot-token",
+      "DISCORD_API_TOKEN": "your-bot-token",
       "DISCORD_APPLICATION_ID": "your-app-id"
     }
   }
 }
 ```
+
+<Callout type="warning">
+**Note**: Discord integration requires implementing a Discord bot that sends messages to the ElizaOS REST API endpoint `/api/messaging/ingest-external`. There is no built-in Discord plugin at this time.
+</Callout>
 
 **Implementation Details:**
 ```typescript title="discord-client-core.ts"
@@ -220,8 +243,21 @@ export class DiscordClient {
       createdAt: message.createdTimestamp
     };
 
-    // Process through standard pipeline - SAME processMessage FOR ALL PLATFORMS
-    const responses = await this.runtime.processMessage(memory);
+    // Send to REST API for processing - ALL platforms use this pattern
+    const response = await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        author_display_name: message.author.username,
+        content: memory.content.text,
+        source_type: 'discord',
+        source_id: message.id,
+        raw_message: memory.content
+      })
+    });
     
     // Send responses back to Discord
     for (const response of responses) {
@@ -253,7 +289,8 @@ client.on('interactionCreate', async (interaction) => {
     }
   };
   
-  await runtime.processMessage(message);
+  // Agent would process this through internal message bus
+  // In actual implementation, this would be sent to /api/messaging/ingest-external
 });
 ```
 
@@ -269,25 +306,38 @@ The Twitter client enables agents to interact on Twitter/X platform.
 - Mention monitoring
 - Search integration
 
-**Plugin Configuration:**
+**Environment Configuration:**
+```bash
+# .env file
+TWITTER_USERNAME=your-username
+TWITTER_PASSWORD=your-password
+TWITTER_EMAIL=your-email
+TWITTER_ENABLE_POST_GENERATION=true
+TWITTER_POST_IMMEDIATELY=false
+TWITTER_INTERACTION_ENABLE=true
+```
+
+**Character Configuration:**
 ```json
 {
   "name": "MyTwitterBot",
   "plugins": [
     "@elizaos/plugin-sql",
-    "@elizaos/plugin-twitter",
     "@elizaos/plugin-bootstrap"
   ],
   "settings": {
     "secrets": {
-      "TWITTER_API_KEY": "your-api-key",
-      "TWITTER_API_SECRET": "your-api-secret",
-      "TWITTER_ACCESS_TOKEN": "your-access-token",
-      "TWITTER_ACCESS_SECRET": "your-access-secret"
+      "TWITTER_USERNAME": "your-username",
+      "TWITTER_PASSWORD": "your-password",
+      "TWITTER_EMAIL": "your-email"
     }
   }
 }
 ```
+
+<Callout type="warning">
+**Note**: Twitter integration requires implementing a Twitter client that sends messages to the ElizaOS REST API endpoint `/api/messaging/ingest-external`. There is no built-in Twitter plugin at this time.
+</Callout>
 
 **Implementation Pattern:**
 ```typescript title="twitter-client-core.ts"
@@ -311,7 +361,20 @@ export class TwitterClient {
       createdAt: new Date(tweet.created_at).getTime()
     };
 
-    const response = await this.runtime.processMessage(memory);
+    // Send to REST API for processing
+    const apiResponse = await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        content: memory.content.text,
+        source_type: memory.content.source,
+        source_id: memory.id,
+        raw_message: memory.content
+      })
+    });
     
     // Reply to tweet
     if (response.content.text) {
@@ -334,7 +397,19 @@ export class TwitterClient {
       createdAt: new Date(message.created_at).getTime()
     };
 
-    await this.runtime.processMessage(memory);
+    // Send to REST API for processing
+    await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        content: memory.content.text,
+        source_type: memory.content.source,
+        raw_message: memory.content
+      })
+    });
   }
 }
 ```
@@ -351,13 +426,18 @@ The Telegram client provides bot integration for Telegram messaging.
 - Location sharing
 - Inline queries
 
-**Plugin Configuration:**
+**Environment Configuration:**
+```bash
+# .env file
+TELEGRAM_BOT_TOKEN=your-bot-token
+```
+
+**Character Configuration:**
 ```json
 {
   "name": "MyTelegramBot",
   "plugins": [
     "@elizaos/plugin-sql",
-    "@elizaos/plugin-telegram",
     "@elizaos/plugin-bootstrap"
   ],
   "settings": {
@@ -367,6 +447,10 @@ The Telegram client provides bot integration for Telegram messaging.
   }
 }
 ```
+
+<Callout type="warning">
+**Note**: Telegram integration requires implementing a Telegram bot that sends messages to the ElizaOS REST API endpoint `/api/messaging/ingest-external`. There is no built-in Telegram plugin at this time.
+</Callout>
 
 **Implementation Example:**
 ```typescript title="telegram-client-core.ts"
@@ -395,7 +479,20 @@ export class TelegramClient {
         createdAt: msg.date * 1000
       };
 
-      const response = await this.runtime.processMessage(memory);
+      // Send to REST API for processing
+    const apiResponse = await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        content: memory.content.text,
+        source_type: memory.content.source,
+        source_id: memory.id,
+        raw_message: memory.content
+      })
+    });
       
       // Send response
       if (response.content.text) {
@@ -486,7 +583,20 @@ export class WebSocketClient {
           createdAt: Date.now()
         };
 
-        const response = await this.runtime.processMessage(memory);
+        // Send to REST API for processing
+    const apiResponse = await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        content: memory.content.text,
+        source_type: memory.content.source,
+        source_id: memory.id,
+        raw_message: memory.content
+      })
+    });
         
         // Emit to room
         this.io.to(data.channelId).emit('message', {
@@ -541,7 +651,7 @@ Integration with Slack workspaces.
 ```json
 {
   "plugins": [
-    "@elizaos/plugin-slack"
+    // Slack plugin would need to be implemented
   ],
   "settings": {
     "secrets": {
@@ -566,7 +676,7 @@ Decentralized communication via Matrix protocol.
 ```json
 {
   "plugins": [
-    "@elizaos/plugin-matrix"
+    // Matrix plugin would need to be implemented
   ],
   "settings": {
     "secrets": {
@@ -654,7 +764,20 @@ export class CustomClient implements IClient {
       const memory = this.convertToMemory(msg);
       
       // Process through standard pipeline
-      const response = await this.runtime.processMessage(memory);
+      // Send to REST API for processing
+    const apiResponse = await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        content: memory.content.text,
+        source_type: memory.content.source,
+        source_id: memory.id,
+        raw_message: memory.content
+      })
+    });
       
       // Send response back
       await this.sendMessage(memory.roomId, response.content);
@@ -713,10 +836,23 @@ export const customPlugin: Plugin = {
 
 ```typescript
 class ResilientClient {
-  async processMessage(message: PlatformMessage) {
+  async handleMessage(message: PlatformMessage) {
     try {
       const memory = this.convertToMemory(message);
-      const response = await this.runtime.processMessage(memory);
+      // Send to REST API for processing
+    const apiResponse = await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        content: memory.content.text,
+        source_type: memory.content.source,
+        source_id: memory.id,
+        raw_message: memory.content
+      })
+    });
       await this.sendResponse(response);
     } catch (error) {
       this.logger.error('Message processing failed:', error);
@@ -751,7 +887,7 @@ class RateLimitedClient {
     }
     
     // Process message normally
-    await this.processMessage(message);
+    await this.handleMessage(message);
   }
 }
 ```
@@ -793,12 +929,12 @@ class ManagedClient {
 
 | Platform | Message Source | Conversion | Processing | Response Delivery |
 |----------|----------------|------------|------------|-------------------|
-| REST API | HTTP POST request | JSON → Memory | `processMessage()` | HTTP response |
-| Discord | Discord.js event | Discord.Message → Memory | `processMessage()` | `channel.send()` |
-| Twitter | Twitter API webhook | Tweet → Memory | `processMessage()` | `client.reply()` |
-| Telegram | Bot API update | Update → Memory | `processMessage()` | `bot.sendMessage()` |
-| WebSocket | Socket event | Event data → Memory | `processMessage()` | Socket emit |
-| Slack | Slack Events API | Event → Memory | `processMessage()` | `chat.postMessage()` |
+| REST API | HTTP POST request | JSON → Standard format | Message bus → Agent runtime | HTTP response/WebSocket |
+| Discord | Discord.js event | Discord.Message → API payload | Send to `/api/messaging/ingest-external` | Bot sends response |
+| Twitter | Twitter API webhook | Tweet → API payload | Send to `/api/messaging/ingest-external` | Bot replies to tweet |
+| Telegram | Bot API update | Update → API payload | Send to `/api/messaging/ingest-external` | Bot sends message |
+| WebSocket | Socket event | Event data → Standard format | Message bus → Agent runtime | Socket emit |
+| Slack | Slack Events API | Event → API payload | Send to `/api/messaging/ingest-external` | Bot posts message |
 
 ### Common Message Format
 
@@ -862,7 +998,7 @@ class BatchingClient {
     
     // Process all messages in parallel
     await Promise.all(
-      messages.map(msg => this.runtime.processMessage(msg))
+      messages.map(msg => this.sendToAPI(msg))
     );
   }
 }
@@ -921,7 +1057,19 @@ export class MockClient implements IClient {
       createdAt: Date.now()
     };
     
-    await this.runtime.processMessage(memory);
+    // Send to REST API for processing
+    await fetch('http://localhost:3000/api/messaging/ingest-external', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        channel_id: memory.roomId,
+        server_id: '00000000-0000-0000-0000-000000000000',
+        author_id: memory.entityId,
+        content: memory.content.text,
+        source_type: memory.content.source,
+        raw_message: memory.content
+      })
+    });
   }
 }
 
