--- a/content/docs/learning-tracks/simple/intro.mdx
+++ b/content/docs/learning-tracks/simple/intro.mdx
@@ -3,8 +3,7 @@ title: Simple Track Introduction
 description: Get started with ElizaOS the easy way - no coding required
 ---
 
-The Simple Track is designed for creators who want to deploy AI agents without coding. This track
-will get you from zero to a deployed AI agent in just a few minutes.
+The Simple Track is designed for creators who want to deploy AI agents with minimal coding. This track will get you from zero to a deployed AI agent quickly using configuration files and templates.
 
 ## What You'll Learn
 
@@ -17,9 +16,10 @@ will get you from zero to a deployed AI agent in just a few minutes.
 ## Who This Track Is For
 
 - People wanting quick results
-- Those preferring visual tools over coding
+- Those comfortable with basic configuration files (JSON/TypeScript)
 - Individuals with great ideas but limited programming experience
 - Creators who want to focus on agent personality and behavior
+- Anyone who can follow step-by-step instructions
 
 ## Learning Path Stages
 
@@ -53,10 +53,11 @@ Launch and maintain your agents
 
 ## What You Need
 
-- No credit card required
-- Free tier available
-- Cancel anytime
+- Node.js v23.3.0+ and Bun v1.2.15+ installed
+- An API key from an AI provider (OpenAI, Anthropic, or local AI)
 - Basic understanding of chat applications
+- A text editor (VS Code recommended)
+- Command line basics (copy/paste commands)
 
 ## Ready to Start?
 
