--- a/content/docs/learning-tracks/technical/index.mdx
+++ b/content/docs/learning-tracks/technical/index.mdx
@@ -29,49 +29,49 @@ By the end of this track, you'll have:
 
 #### Module 1: Core Architecture
 
-- [Runtime System](./01-runtime-system)
-- [Plugin Architecture](./02-plugin-architecture)
-- [Event System](./03-event-system)
-- [State Management](./04-state-management)
+- [Architecture Overview](./architecture/overview) - System design and core concepts
+- [Runtime System](./architecture/) - AgentRuntime implementation details
+- Plugin Architecture - Working with ElizaOS plugins
+- Event System - Event-driven patterns
 
 #### Module 2: Advanced Components
 
-- [Memory System](./05-memory-system)
-- [Model Abstraction](./06-model-abstraction)
-- [Provider System](./07-provider-system)
-- [Service Architecture](./08-service-architecture)
+- Memory System - Understanding memory types and operations
+- Model Abstraction - AI model integration patterns
+- Provider System - Building context providers
+- Service Architecture - Service registry and management
 
 ### Phase 2: Custom Development (3-4 hours)
 
 #### Module 3: Plugin Development
 
-- [Building Actions](./09-building-actions)
-- [Creating Evaluators](./10-creating-evaluators)
-- [Custom Providers](./11-custom-providers)
-- [Background Services](./12-background-services)
+- Building Actions - Creating custom agent behaviors
+- Creating Evaluators - Post-processing and learning
+- Custom Providers - Extending context capabilities
+- Background Services - Asynchronous operations
 
 #### Module 4: Advanced Patterns
 
-- [Multi-Agent Systems](./13-multi-agent-systems)
-- [Agent Coordination](./14-agent-coordination)
-- [Custom Integrations](./15-custom-integrations)
-- [Performance Optimization](./16-performance-optimization)
+- Multi-Agent Systems - Coordinating multiple agents
+- Agent Communication - Inter-agent messaging
+- Custom Integrations - External service integration
+- Performance Optimization - Scaling and efficiency
 
 ### Phase 3: Production Systems (2-4 hours)
 
 #### Module 5: Deployment & Scaling
 
-- [Production Architecture](./17-production-architecture)
-- [Database Strategies](./18-database-strategies)
-- [Monitoring & Logging](./19-monitoring-logging)
-- [Security Considerations](./20-security-considerations)
+- Production Architecture - High-availability patterns
+- Database Strategies - PostgreSQL and vector storage
+- Monitoring & Logging - Observability best practices
+- Security Considerations - Authentication and sandboxing
 
 #### Module 6: Advanced Topics
 
-- [Custom Model Providers](./21-custom-model-providers)
-- [Platform Extensions](./22-platform-extensions)
-- [Testing Strategies](./23-testing-strategies)
-- [Contributing Guidelines](./24-contributing-guidelines)
+- Custom Model Providers - Integrating new AI models
+- Platform Extensions - Adding new communication channels
+- Testing Strategies - Unit and integration testing
+- Contributing Guidelines - Open source participation
 
 ## Track Features
 
